
FIND_PACKAGE (NLOPT)

if (NLOPT_FOUND)
    ADD_SUBDIRECTORY(ConstrainedIK)
endif ()

ADD_SUBDIRECTORY(LoadRobot)

ADD_SUBDIRECTORY(CameraViewer)
ADD_SUBDIRECTORY(RobotViewer)
ADD_SUBDIRECTORY(SceneViewer)
ADD_SUBDIRECTORY(Jacobi)
ADD_SUBDIRECTORY(GenericIK)
ADD_SUBDIRECTORY(Reachability)
ADD_SUBDIRECTORY(Stability)
ADD_SUBDIRECTORY(GraspEditor)

ADD_SUBDIRECTORY(ReachabilityMap)
ADD_SUBDIRECTORY(LoadURDFRobot)

#Visualization Testing
ADD_SUBDIRECTORY(VisualizationTests)

ADD_SUBDIRECTORY(SelectionDemo)