
FIND_PACKAGE (RBDL)
FIND_PACKAGE (NLOPT)

if (Simox_USE_RBDL AND RBDL_FOUND) 
    ADD_SUBDIRECTORY(InverseDynamics)
endif ()

if (NLOPT_FOUND)
    ADD_SUBDIRECTORY(ConstrainedIK)
endif ()

ADD_SUBDIRECTORY(loadRobot)

ADD_SUBDIRECTORY(CameraViewer)
ADD_SUBDIRECTORY(GenericIK)
ADD_SUBDIRECTORY(GraspEditor)
ADD_SUBDIRECTORY(Jacobi)
ADD_SUBDIRECTORY(loadURDFRobot)
ADD_SUBDIRECTORY(reachability)
ADD_SUBDIRECTORY(ReachabilityMap)
ADD_SUBDIRECTORY(RobotViewer)
ADD_SUBDIRECTORY(RobotViewerOSG)
ADD_SUBDIRECTORY(SceneViewer)
ADD_SUBDIRECTORY(Simox2Mjcf)
ADD_SUBDIRECTORY(stability)


